feat(net): 添加连接空闲超时和智能取消定时器功能
- 在 TcpConnection 中添加 idleTimeout 和 idleTimerId 成员，用于管理空闲超时
- 在 TcpServer 中添加 setIdleTimeout 方法，允许设置空闲超时时间
- 在 EventLoop 和 TimerQueue 中添加智能取消定时器相关逻辑
- 更新相关头文件和源文件，实现上述功能

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,7 @@
         "typeinfo": "cpp",
         "bitset": "cpp",
         "cstring": "cpp",
-        "regex": "cpp"
+        "regex": "cpp",
+        "optional": "cpp"
     }
 }
